hotfix/issues - Fixed background images issues on mobile

--- a/src/scss/sections/footer-responsive.scss
+++ b/src/scss/sections/footer-responsive.scss
@@ -3,7 +3,7 @@
 @media only screen and (max-width: 960px) {
   footer {
     background-image: url(../assets/footer-background.jpg);
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center 0;
